# telegram-packages-bot

./: .travis.yml  Cargo.toml  Dockerfile
src/: botanio.rs  crates.rs  error.rs  godoc.rs  lib.rs  telegram.rs
src/telegram/: bot.rs  html.rs  mod.rs
