[package]
name = "packagesbot"
version = "0.1.0"
authors = ["Nikolay Oshnurov <onlk@yandex.ru>"]

[lib]
name = "packagesbot"
path = "src/lib.rs"

[[bin]]
doc = false
name = "packagesbot"
path = "src/bin/server.rs"

[dependencies]
env_logger = "0.3.3"
hyper = "0.9.9"
lazy_static = "0.2.1"
log = "0.3.6"
quick-error = "1.1.0"
regex = "0.1.71"
rustc-serialize = "0.3.19"
select = "0.3.0"
slog = "0.6.0"
slog-stdlog = "0.6.0"
slog-term = "0.6.0"
telegram-bot = "0.4.2"
tendril = "0.2.2"
threadpool = "1.0"
url = "1.1.1"
